--- a/config_flow.yaml
+++ b/config_flow.yaml
@@ -1,8 +1,9 @@
-config: |
-  cells:
-    SW_1:
-      dataRef: "ICMP ping"
-      fillColor:
-        thresholds:
-          - { color: "#FF0000", level: 0 }
-          - { color: "#00FF00", level: 1 }
+cellIdPreamble: "cell-"
+cells:
+  SW_1:
+    dataRef: "ICMP ping"
+    fillColor:
+      thresholds:
+        - { color: "#FF0000", level: 0 }
+        - { color: "#00FF00", level: 1 }
+
